--- a/FlightDataHub/package.json
+++ b/FlightDataHub/package.json
@@ -20,6 +20,7 @@
     "loopback-boot": "^2.28.0",
     "loopback-component-explorer": "^6.3.1",
     "loopback-connector-mongodb": "^3.9.2",
+    "redis": "^2.8.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^1.1.0"
   },
