--- a/server/model-config.json
+++ b/server/model-config.json
@@ -13,6 +13,28 @@
       "./mixins"
     ]
   },
+  "User": {
+    "dataSource": "db"
+  },
+  "AccessToken": {
+    "dataSource": "db",
+    "public": false
+  },
+  "ACL": {
+    "dataSource": "db",
+    "public": false
+  },
+  "RoleMapping": {
+    "dataSource": "db",
+    "public": false,
+    "options": {
+      "strictObjectIDCoercion": true
+    }
+  },
+  "Role": {
+    "dataSource": "db",
+    "public": false
+  },
   "Airline": {
     "dataSource": "MongoDB",
     "public": true
